# serializer version: 1
# name: test_feature_spec_version_deterministic
  'd556d5517ddeebd90af74908d3f2d8a3b201e6cc86141d5d0bf0beb11f0c4185'
# ---
# name: test_feature_spec_version_includes_all_properties
  '887a915861bbd8b4d1733ae7b44334b124b37e0bc252e1b19bfdd4ed0b9c3af3'
# ---
# name: test_feature_spec_version_recorded_in_metadata_store
  dict({
    'feature_key': 'recorded/feature',
    'feature_spec_version': 'a8c39929a72fee029e1455dba09a39083610a118c6f2c43fc7c49a254746c846',
    'feature_version': '0c7b2d83252fbf2f689bec7d37c4f7ffb103755d11eafabc1e000a372f415d83',
    'snapshot_version': '14d4294da40f4ab27ca85eb739fffd70e92c92522dbcba995cfa2aa343988bf3',
  })
# ---
# name: test_feature_spec_version_stored_in_snapshot
  dict({
    'feature_class_path': 'tests.test_spec_version.SnapshotFeature',
    'feature_spec': dict({
      'code_version': 2,
      'deps': None,
      'fields': list([
        dict({
          'code_version': 1,
          'deps': '__METAXY_ALL_DEP__',
          'key': list([
            'data',
          ]),
        }),
      ]),
      'id_columns': list([
        'sample_uid',
      ]),
      'key': list([
        'snapshot',
        'test',
      ]),
    }),
    'feature_spec_version': '6597e5c49ec3e425db78176681ef993b6d1882e585045d660bc38f9f4af5b9f6',
    'feature_tracking_version': '421cd82e366007737e267cac5bca2efd5a336471a71dca049a843354f31dfb2c',
    'feature_version': '7cfde77960e3cf10327e9cb97f311418b101fc5ee2c146922a997306e318edaf',
    'project': 'test',
  })
# ---
# name: test_feature_spec_version_with_column_selection_and_rename
  '4cb711ca35b36eb16ca944654e1c5295377d3bf11c0f93bbc81fd6aee23e8b67'
# ---
# name: test_feature_spec_version_with_multiple_complex_deps
  'e17b203afe9da338774713b0b999bb293d7d4d47ed014e77307f5987abe3321b'
# ---
